portfolio carousel aplied

--- a/css/about.css
+++ b/css/about.css
@@ -78,6 +78,10 @@ footer a.footer_links{
     text-decoration: none;
 }
 
+footer a img#footer_icons{
+    width: 24px;
+}
+
 footer a{
     text-decoration: none;
 }
