--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -6,6 +6,7 @@
     --secondary-color:#ECB365; 
     --ice-color: #f6f6f6;
     --background-hover: rgba(39, 39, 39, 1);
+    --background-cover-card: rgba(0, 0, 0, 0.863);
 
     --first-font: 'Krona One', sans-serif;
     --secondary-word: 'Monserrat', sans-serif;
@@ -40,19 +41,80 @@ main.presentation{
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding: 6% 8%; 
+    padding: 8% 8%; 
     overflow: hidden;
 }
 
 section.presentation__assignment{
-    width: 50%;
-    display: flex;
-    flex-direction: column;
-    gap: 40px;
+    width: 100%;
 }
 
 .presentation__assignment__title{
+    text-align: center;
+    padding-bottom: 1em;
+    font-family: var(--first-font);
+}
+
+section div.presentation__projects{
+    width: 100%;
+    background-color: #1f1e1e;
+    height: 32em;
+    border-radius: 12px;
+}
+
+.swiper {
+    width: 100%;
+    height: 100%;
+}
+
+.swiper-slide {
+    text-align: center;
+    font-size: 18px;
+    display: flex;
+    justify-content: center;
     align-items: center;
+  }
+
+section div.presentation__card{
+    background-color: var(--background-cover-card);
+    width: 70%;
+    height: 80%;
+    display: flex;
+    opacity: 0.1;
+    border: 1px solid var(--main-words-color);
+    justify-content: center;
+    align-items: center;
+    border-radius: 12px;
+}
+
+section div.presentation__card div.presentation__buttons{
+    background-color: red;
+    /* background-color: #000000; */
+    display: flex;
+    
+    align-items: center;
+    justify-content: center;
+    gap: 1em;
+    box-sizing: border-box;
+    width: 60%;
+    border-radius: 16px;
+    font-size: 1.5rem;
+    font-weight: 600;
+    padding: 21.5px 0;
+    font-family: var(--secondary-word);
+    color: var(--main-words-color);
+    text-decoration: none;
+}
+
+section div.presentation__card div.buttons .presentations__button_card{
+    
+}
+
+section div.presentation__card:hover{
+    opacity: 0.8;
+    border: 3px solid var(--secondary-color);
+    cursor: pointer;
+    transition: 0.3s;
 }
 
 footer.footer{
@@ -65,6 +127,10 @@ footer.footer{
 footer a.footer_links{
     margin-right: 0.8em;
     text-decoration: none;
+}
+
+footer a img#footer_icons{
+    width: 24px;
 }
 
 footer a{
