--- a/css/style.css
+++ b/css/style.css
@@ -122,6 +122,10 @@ footer a.footer_links{
     text-decoration: none;
 }
 
+footer a img#footer_icons{
+    width: 24px;
+}
+
 footer div.icons_footer{
     padding-bottom: 1em;
 }
