--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -3,13 +3,18 @@
 :root{
     --main-color: #212121;
     --main-words-color:  rgba(255, 255, 255, 0.918);
-    --secondary-color:#ECB365; 
+    --secondary-color:#ECB365;
+    /* #ECB365;  */
     --ice-color: #f6f6f6;
     --background-hover: rgba(39, 39, 39, 1);
-    --background-cover-card: rgba(0, 0, 0, 0.863);
+    --background-black-hover: rgba(39, 39, 39, 1);
+    --background-cover-card:  rgb(221,209,113);
 
     --first-font: 'Krona One', sans-serif;
     --secondary-word: 'Monserrat', sans-serif;
+
+    --swiper-pagination-progressbar-bg-color: var(--secondary-color)
+    --swipper-pagination-color: var(--secondary-color)
 }
     
 body{
@@ -41,7 +46,7 @@ main.presentation{
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding: 8% 8%; 
+    padding: 2%; 
     overflow: hidden;
 }
 
@@ -53,6 +58,8 @@ section.presentation__assignment{
     text-align: center;
     padding-bottom: 1em;
     font-family: var(--first-font);
+    color: var(--secondary-color);
+    margin-bottom: 1em;
 }
 
 section div.presentation__projects{
@@ -73,47 +80,87 @@ section div.presentation__projects{
     display: flex;
     justify-content: center;
     align-items: center;
-  }
+}
 
 section div.presentation__card{
     background-color: var(--background-cover-card);
+    background: radial-gradient(circle, rgba(221,209,113,0.6082808123249299) 0%, rgba(45,44,44,0.9948354341736695) 100%);
     width: 70%;
     height: 80%;
     display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
     opacity: 0.1;
     border: 1px solid var(--main-words-color);
-    justify-content: center;
-    align-items: center;
     border-radius: 12px;
 }
 
-section div.presentation__card div.presentation__buttons{
-    background-color: red;
-    /* background-color: #000000; */
+section div.presentation__card div.view_project{
+    background-color: white;
+    width: 50%;
+    height: 50%;
+    margin: 0.5em;
     display: flex;
-    
-    align-items: center;
-    justify-content: center;
-    gap: 1em;
-    box-sizing: border-box;
-    width: 60%;
-    border-radius: 16px;
-    font-size: 1.5rem;
-    font-weight: 600;
-    padding: 21.5px 0;
-    font-family: var(--secondary-word);
-    color: var(--main-words-color);
-    text-decoration: none;
 }
 
-section div.presentation__card div.buttons .presentations__button_card{
+section div.presentation__card div.presentation_content{
+    width: 60%;
+    height: 30%;
+    padding: 2%;
+    display: flex;
+    color: var(--main-color);
+    border-radius: 1.5em;
+    align-items: center;
+    justify-content: space-between;
+    flex-direction: column;
+    color: var(--main-words-color);
+    font-family: var(--secondary-word);
+    background-color: var(--background-black-hover);
+    margin-bottom: 1em;
+}
+
+
+
+section div.presentation__card div.presentation__buttons{
+    display: flex;
+    /* background-color: #000000; */
     
+}
+
+section div.presentation__card div.presentation__buttons button.presentations__button_card{
+    font-family: var(--secondary-word);
+    color: var(--main-words-color);
+    cursor: pointer;
+    border: none;
+    padding: 0.6em;
+    display: flex;
+    gap: 1em;
+    background-color: #1f1e1e8e;
+    font-size: 1em;
+    border-radius: 4%;
+}
+
+section div.presentation__card div.presentation__buttons button.presentations__button_card:hover{
+    background-color: var(--background-black-hover);
+    transition: 0.5s;
+}
+
+div.swiper-pagination{
+    background-color: var(--secondary-color);
+}
+
+div.swiper-button-prev{
+    color: var(--secondary-color);
+}
+
+div.swiper-button-next{
+    color: var(--secondary-color);
 }
 
 section div.presentation__card:hover{
     opacity: 0.8;
     border: 3px solid var(--secondary-color);
-    cursor: pointer;
     transition: 0.3s;
 }
 
