--- a/css/about.css
+++ b/css/about.css
@@ -35,8 +35,29 @@ header.navigation{
     font-family: var(--secondary-word);
     font-size: 24px;
     font-weight: 600;
-    color: var(--background-third-color);
+    color: var(--secondary-color);
+    display: inline-block;
+    padding-bottom: 0.5em;
+    position: relative;
     text-decoration: none;
+}
+
+.navigation__menu__link::before{
+    content: "";
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    width: 0;
+    height: 2px;
+    background-color: var(--secondary-color);
+    transition: width 0.3s ease-out;
+}
+a.navigation__menu__link:hover::before{
+    width: 30%;
+}
+
+a.navigation__menu__link:hover{
+    color: var(--main-words-color);
 }
 
 main.presentation{
