adding a new pallete of theme on project

--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,7 @@
 :root{
     --main-color: #212121;
     --main-words-color:  #f5fafaec;
-    --secondary-color: #ECB365;
+    --secondary-color:#6bd0f8;
     --black-default: #0D7377;
     --background-black-hover: rgba(39, 39, 39, 1);
 
