--- a/css/about.css
+++ b/css/about.css
@@ -3,7 +3,7 @@
 :root{
     --main-color: #212121;
     --main-words-color:  #f5fafa;
-    --secondary-color: #ECB365;
+    --secondary-color:#6bd0f8;
     --black-default: #0D7377;
     --background-third-color: #ECB365;
     --black-default: #000000;
