--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -8,7 +8,7 @@
     --ice-color: #f6f6f6;
     --background-hover: rgba(39, 39, 39, 1);
     --background-black-hover: rgba(39, 39, 39, 1);
-    --background-cover-card:  rgb(221,209,113);
+    --background-cover-card:  rgb(107,208,248);
 
     --first-font: 'Krona One', sans-serif;
     --secondary-word: 'Monserrat', sans-serif;
@@ -104,7 +104,7 @@ section div.presentation__projects{
 
 section div.presentation__card{
     background-color: var(--background-cover-card);
-    background: radial-gradient(circle, rgba(221,209,113,0.6082808123249299) 0%, rgba(45,44,44,0.9948354341736695) 100%);
+    background: radial-gradient(circle, rgba(107,208,248,0.8113620448179272) 0%, rgba(13,8,9,1) 100%);
     width: 70%;
     height: 80%;
     display: flex;
