--- a/css/style.css
+++ b/css/style.css
@@ -85,13 +85,14 @@ p.presentation__assignment__paragraphs{
     font-size: 1.5rem;
     font-family: var(--first-font);
     margin-bottom: 5%;
+    width: 200px;
 }
 
 div.presentation__assignment__links{
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    align-items: center;
+    align-items: center;    
     gap: 32px;
 }
 
@@ -119,6 +120,10 @@ h2.presentation__links__subtitle{
     font-family: var(--secondary-word);
     color: var(--main-words-color);
     text-decoration: none;
+}
+
+.fa-linkedin{
+    font-family: var(--secondary-word); 
 }
 
 .presentation__links__link:hover{
@@ -149,6 +154,43 @@ footer a img#footer_icons{
 
 footer div.icons_footer{
     padding-bottom: 1em;
+}
+
+@media (min-width: 1200px){
+    footer.footer{
+        color: var(--main-color);
+        padding: 24px;
+        background-color: var(--secondary-color);
+        display: flex;
+        position: relative;
+        align-items: center;
+        justify-content: center;
+    }
+    
+    footer a.footer_links{
+        width: 50px;
+        height: 50px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        margin: 0 15px;
+        border-radius: 50%;
+        text-decoration: none;
+    }
+    
+    footer a.footer_links img{
+        width: 24px
+    }
+    
+    footer a.footer_links:hover{
+        background-color: var(--main-words-color);
+        transition: 0.3s;
+    }
+
+    footer h3{
+        position: absolute;
+        bottom: 0;
+    }
 }
 
 @media (max-width: 1200px){
@@ -182,5 +224,22 @@ footer div.icons_footer{
     h2.presentation__links__subtitle{
         font-size: 1.2rem;
     }
+}
 
+@media (min-width: 300px){
+    .presentation__links__link{
+        border: 2px solid var(--secondary-color);
+        /* background-color: #000000; */
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        gap: 1em;
+        box-sizing: border-box;
+        width: 60%;
+        border-radius: 16px;
+        font-size: 1.5rem;
+        padding: 21.5px 80px;
+        color: var(--main-words-color);
+        text-decoration: none;
+    }
 }
