--- a/css/about.css
+++ b/css/about.css
@@ -88,6 +88,7 @@ img#personal-image{
 }
 
 footer.footer{
+    position: relative;
     color: var(--main-color);
     padding: 24px;
     background-color: var(--secondary-color);
@@ -105,6 +106,12 @@ footer a img#footer_icons{
 
 footer a{
     text-decoration: none;
+}
+
+
+footer h3{
+    position: absolute; 
+    bottom: 0;
 }
 
 @media (min-width: 1200px){
