adding mobile responsive on the all pages

--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Krona+One&family=Montserrat:ital,wght@0,600;1,400&display=swap');
+@import url(reset.css);
 
 :root{
     --main-color: #212121;
@@ -20,7 +21,6 @@
 body{
     background-color: var(--main-color);
     color: var(--main-words-color);
-    box-sizing: border-box;
     overflow-x: hidden;
 }
 
