--- a/css/about.css
+++ b/css/about.css
@@ -15,6 +15,7 @@
     --black-default: #000000;
     --ice-color: #f6f6f6;
     --background-black-hover: rgba(39, 39, 39, 1);
+    --background-black-hover: rgba(39, 39, 39, 1);
 
     --first-font: 'Krona One', sans-serif;
     --secondary-word: 'Monserrat', sans-serif;
@@ -23,6 +24,16 @@
 body{
     background-color: var(--main-color);
     color: var(--main-words-color);
+    overflow-x: hidden;
+    height: 100%;
+}
+
+::-webkit-scrollbar{
+    width: 12px;
+}
+::-webkit-scrollbar-thumb{
+    background-color: var(--scroolbar-color);
+    border-radius: 6px;
 }
 
 header.navigation{
@@ -230,33 +241,32 @@ img#personal-image{
     width: 30%;
 }
 
-footer{
-    flex-shrink: 0;
-}
-
 footer.footer{
-    position: relative;
     color: var(--main-color);
     padding: 24px;
     background-color: var(--secondary-color);
+    display: flex;
+    align-items: center;
+    justify-content: center;
     text-align: center;
+    position: relative;
 }
 
 footer a.footer_links{
-    margin-right: 0.8em;
+    margin: 0 24px;
     text-decoration: none;
 }
 
-footer a img#footer_icons{
-    width: 24px;
+footer a.footer_links img{
+    width: 24px
 }
 
-footer a{
-    text-decoration: none;
+footer div.icons_footer{
+    padding-bottom: 1em;
 }
 
 footer h3{
-    position: absolute; 
+    position: absolute;
     bottom: 0;
 }
 
@@ -307,6 +317,11 @@ footer h3{
 
     header.navigation {
         padding: 3%;
+    }
+
+    body{
+        display: flex;
+        flex-direction: column;
     }
 
     .navigation__menu {
