--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -22,6 +22,8 @@ body{
     background-color: var(--main-color);
     color: var(--main-words-color);
     overflow-x: hidden;
+    height: 100%;
+    margin: 0;
 }
 
 header.navigation{
@@ -195,7 +197,7 @@ footer.footer{
 }
 
 footer a.footer_links{
-    margin: 0 15px;
+    margin: 0 24px;
     text-decoration: none;
 }
 
@@ -241,8 +243,8 @@ footer h3{
         position: relative;
         align-items: center;
         justify-content: center;
+        
     }
-    
     
     footer a.footer_links{
         width: 50px;
@@ -250,7 +252,7 @@ footer h3{
         display: flex;
         align-items: center;
         justify-content: center;
-        margin: 0 15px;
+        margin: 0 32px;
         border-radius: 50%;
         text-decoration: none;
     }
@@ -271,6 +273,16 @@ footer h3{
 }
 
 @media (max-width: 1200px){
+
+    html, body{
+        height: 100%;
+        margin: 0;
+    }
+
+    body{
+        display: flex;
+        flex-direction: column;
+    }
 
     header.navigation {
         padding: 3%;
@@ -301,6 +313,7 @@ footer h3{
     h2.presentation__links__subtitle{
         font-size: 1.2rem;
     }
+
 }
 
 @media (max-width: 700px){
