--- a/css/about.css
+++ b/css/about.css
@@ -16,6 +16,7 @@
     --ice-color: #f6f6f6;
     --background-black-hover: rgba(39, 39, 39, 1);
     --background-black-hover: rgba(39, 39, 39, 1);
+    --scrollbar-color:  rgba(46, 222, 245, 0.144);
 
     --first-font: 'Krona One', sans-serif;
     --secondary-word: 'Monserrat', sans-serif;
@@ -32,7 +33,7 @@ body{
     width: 12px;
 }
 ::-webkit-scrollbar-thumb{
-    background-color: var(--scroolbar-color);
+    background-color: var(--scrollbar-color);
     border-radius: 6px;
 }
 
