--- a/css/about.css
+++ b/css/about.css
@@ -48,7 +48,7 @@ header.navigation{
 
 .navigation__menu__link{
     font-family: var(--secondary-word);
-    font-size: 24px;
+    font-size: 1.5em;
     font-weight: 600;
     color: var(--secondary-color);
     display: inline-block;
