--- a/css/style.css
+++ b/css/style.css
@@ -185,7 +185,7 @@ footer h3{
 
 @media (min-width: 1200px){
     a.navigation__menu__link{
-        font-size: 1.5em;
+        font-size: 24px;
     }
 
     p.presentation__assignment__paragraphs{
@@ -242,7 +242,7 @@ footer h3{
 
     .navigation__menu {
         justify-content: center;
-        font-size: 1.2em;
+        font-size: 24px;
     }
 
     .presentation{
