--- a/css/style.css
+++ b/css/style.css
@@ -8,13 +8,15 @@
 }
 
 :root{
-    --main-color: #212121;
+    --main-color: #080f1a;
     --main-words-color:  #f5fafaec;
-    --secondary-color:#6bd0f8;
+    --secondary-color:#21c9cf;
+    /* #06a1a7; */
+    /* #6bd0f8; */
     --black-default: #0D7377;
-    --background-black-hover: rgba(39, 39, 39, 1);
+    --background-black-hover: #0e181fd2;
 
-    --scrollbar-color: rgba(46, 222, 245, 0.144);
+    --scrollbar-color: #2edef525;
 
     --first-font: 'Krona One', sans-serif;
     --secondary-word: 'Monserrat', sans-serif;
@@ -75,7 +77,7 @@ a.navigation__menu__link:hover{
     color: var(--main-words-color);
 }
 
-strong{
+strong.presentation__assingment-strong{
     color: var(--secondary-color);
 }
 
@@ -341,6 +343,4 @@ footer h3{
         color: var(--main-words-color);
         text-decoration: none;
     }
-
-
 }
