--- a/css/about.css
+++ b/css/about.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Krona+One&family=Montserrat:ital,wght@0,600;1,400&display=swap');
+@import url('/css/style.css');
 
 *{
     margin: 0;
@@ -6,7 +7,7 @@
     box-sizing: border-box;
 }
 
-:root{
+/* :root{
     --main-color: #212121;
     --main-words-color:  #f5fafa;
     --secondary-color:#6bd0f8;
@@ -20,7 +21,7 @@
 
     --first-font: 'Krona One', sans-serif;
     --secondary-word: 'Monserrat', sans-serif;
-}
+} */
 
 body{
     background-color: var(--main-color);
